--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dignissimos aspernatur tenetur incidunt porro consectetur dolorem iusto dolore laboriosam qui, nulla ut perspiciatis esse dolor debitis obcaecati dolorum! Beatae, doloribus.</p>
     <P>I am an instructor.</P>
 
-    <p>My name is what ?</p>
+    <h1>diff</h1>
 </body>
 </html>
