--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Karan Kapkoti</h1>
     <hr>
-    <p>I am a data scientist.</p>
+    <p>I am a data scientist and a singer too.</p>
+    
    
 </body>
 </html>
